@@ -444,19 +444,6 @@ task createDockerfile(type: Dockerfile){
     instruction "COPY ${jarName} \$HOME"
     instruction 'WORKDIR \$HOME'
     instruction "CMD \$HOME/run.sh"
-    // if(new File("${projectDir}/docker/run.sh").exists())
-    // {
-    //   instruction "COPY run.sh /home/omar/run.sh"
-    //   instruction "USER root"
-    //   instruction "RUN chmod ugo+rx /home/omar/run.sh && chown 1001:0 /home/omar/* && chmod 777 /home/omar"
-    //   instruction "USER 1001"
-    //   instruction "CMD /home/omar/run.sh"
-    // }
-    // else
-    // {
-    //    instruction "CMD java -server -Xms256m -Xmx1024m -Djava.awt.headless=true -XX:+CMSClassUnloadingEnabled -XX:+UseGCOverheadLimit -XX:+UnlockExperimentalVMOptions  -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -Djava.security.egd=file:/dev/./urandom -jar ${jarName}"
-
-    // }
   }
 }
 
